@@ -32,6 +32,7 @@ Conor MacNeill
 Craeg Strong
 Craig Cottingham
 Craig R. McClanahan
+Craig Ryan
 Curtis White
 Cyrille Morvan
 Dale Anson
@@ -63,6 +64,7 @@ Erik Langenbach
 Erik Meade
 Ernst de Haan
 Frederic Lavigne
+Frank Somers
 Gary S. Weaver
 Gautam Guliani
 Gero Vermaas
