@@ -128,7 +128,7 @@
         <td bgcolor="#eeeeee" valign="top" align="left">
           <font color="#000000" size="-1" face="arial,helvetica,sanserif">String</font>
         </td>
-        <td bgcolor="#eeeeee" valign="top" align="left" rowspan="9">
+        <td bgcolor="#eeeeee" valign="top" align="left" rowspan="10">
           <font color="#000000" size="-1" face="arial,helvetica,sanserif">Optional</font>
         </td>
     </tr>
@@ -226,6 +226,21 @@
         </td>
         <td bgcolor="#eeeeee" valign="top" align="left">
           <font color="#000000" size="-1" face="arial,helvetica,sanserif">String</font>
+        </td>
+    </tr>
+
+    <!-- Attribute -->
+    <tr>
+        <td bgcolor="#eeeeee" valign="top" align="left">
+          <font color="#000000" size="-1" face="arial,helvetica,sanserif">verbose</font>
+        </td>
+        <td bgcolor="#eeeeee" valign="top" align="left">
+          <font color="#000000" size="-1" face="arial,helvetica,sanserif">
+            Enable/ disable log messages showing when each sub-build path is entered/ exited.
+            The default value is false.</font>
+        </td>
+        <td bgcolor="#eeeeee" valign="top" align="left">
+          <font color="#000000" size="-1" face="arial,helvetica,sanserif">boolean</font>
         </td>
     </tr>
 
@@ -491,7 +506,7 @@
   <tr>
     <td>
       <div align="center"><font color="#525D76" size="-1"><em>
-        Copyright &copy; 2000-2004, The Apache Software Foundation. All Rights Reserved.
+        Copyright &copy; 2000-2005, The Apache Software Foundation. All Rights Reserved.
       </em></font></div>
     </td>
   </tr>
